--- a/WeatherApp/WA-Front/View/HourlyView.xaml
+++ b/WeatherApp/WA-Front/View/HourlyView.xaml
@@ -16,7 +16,7 @@
                            IsVisible="{Binding IsLoading}"/>
         <BindableLayout.ItemTemplate>
             <DataTemplate>
-                <Border x:DataType="apimodel:HourlyDataModel">
+                <Border x:DataType="apimodel:HourlyModel">
                     <Border.StrokeShape>
                         <RoundRectangle CornerRadius="5"/>
                     </Border.StrokeShape>
@@ -25,41 +25,83 @@
                             <TapGestureRecognizer Tapped="TapGestureRecognizer_Tapped"/>
                         </controls:Expander.GestureRecognizers>
                         <controls:Expander.HeaderContent>
-                            <Grid ColumnDefinitions="Auto,*,*,*,*,*,3*"
+                            <Grid ColumnDefinitions="Auto,*,*,*,*,*"
                                   RowDefinitions="50"
                                   BackgroundColor="#252247">
                                 <Image Grid.Column="0"
-                                       Source="p50.png"/>
+                                       Source="{Binding Data.WeatherImage, StringFormat='p50.png'}"/>
                                 <Label Grid.Column="1"
                                        BackgroundColor="#312D59"
-                                       Text="{Binding Time, StringFormat='{0:dd/MM HH:mm}'}"/>
+                                       Text="{Binding Data.Time, StringFormat='{0:dd/MM HH:mm}'}"/>
                                 <Label Grid.Column="2"
-                                       BackgroundColor="#2B2759"
-                                       Text="{Binding Temperature2M, StringFormat='{0}°C'}"/>
+                                       BackgroundColor="#2B2759">
+                                    <Label.Text>
+                                        <MultiBinding StringFormat="{}{0}{1}">
+                                            <Binding Path="Data.Temperature2M"/>
+                                            <Binding Path="Units.Temperature2M"/>
+                                        </MultiBinding>
+                                    </Label.Text>
+                                </Label>
                                 <Label Grid.Column="3"
-                                       BackgroundColor="#242057"
-                                       Text="{Binding ApparentTemperature, StringFormat='Real {0}°C'}"/>
+                                       BackgroundColor="#242057">
+                                    <Label.Text>
+                                        <MultiBinding StringFormat="Real {0}{1}">
+                                            <Binding Path="Data.ApparentTemperature"/>
+                                            <Binding Path="Units.ApparentTemperature"/>
+                                        </MultiBinding>
+                                    </Label.Text>
+                                </Label>
                                 <Label Grid.Column="4"
-                                       BackgroundColor="#312D59"
-                                       Text="{Binding Cloudcover}"/>
+                                       BackgroundColor="#312D59">
+                                    <Label.Text>
+                                        <MultiBinding StringFormat="Cloudcover: {0}{1}">
+                                            <Binding Path="Data.Cloudcover"/>
+                                            <Binding Path="Units.Cloudcover"/>
+                                        </MultiBinding>
+                                    </Label.Text>
+                                </Label>
                                 <Label Grid.Column="5"
-                                       BackgroundColor="#2B2759"
-                                       Text="{Binding Visibility}"/>
+                                       BackgroundColor="#2B2759">
+                                    <Label.Text>
+                                        <MultiBinding StringFormat="Visibility: {0}{1}">
+                                            <Binding Path="Data.Visibility"/>
+                                            <Binding Path="Units.Visibility"/>
+                                        </MultiBinding>
+                                    </Label.Text>
+                                </Label>
                             </Grid>
                         </controls:Expander.HeaderContent>
                         <controls:Expander.MainContent>
-                            <Grid ColumnDefinitions="Auto,*,*,*,6*"
+                            <Grid ColumnDefinitions="Auto,*,*,*,*"
                                   RowDefinitions="50"
                                   BackgroundColor="#252247">
                                 <Label Grid.Column="1"
-                                       BackgroundColor="#312D59"
-                                       Text="{Binding Precipitation}"/>
+                                       BackgroundColor="#312D59">
+                                    <Label.Text>
+                                        <MultiBinding StringFormat="Precipation: {0}{1}">
+                                            <Binding Path="Data.Precipitation"/>
+                                            <Binding Path="Units.Precipitation"/>
+                                        </MultiBinding>
+                                    </Label.Text>
+                                </Label>
                                 <Label Grid.Column="2"
-                                       BackgroundColor="#2B2759"
-                                       Text="{Binding SurfacePressure}"/>
+                                       BackgroundColor="#2B2759">
+                                    <Label.Text>
+                                        <MultiBinding StringFormat="SurfacePressure: {0}{1}">
+                                            <Binding Path="Data.SurfacePressure"/>
+                                            <Binding Path="Units.SurfacePressure"/>
+                                        </MultiBinding>
+                                    </Label.Text>
+                                </Label>
                                 <Label Grid.Column="3"
-                                       BackgroundColor="#242057"
-                                       Text="{Binding Relativehumidity2M}"/>
+                                       BackgroundColor="#242057">
+                                    <Label.Text>
+                                        <MultiBinding StringFormat="Relativehumidity: {0}{1}">
+                                            <Binding Path="Data.Relativehumidity2M"/>
+                                            <Binding Path="Units.Relativehumidity2M"/>
+                                        </MultiBinding>
+                                    </Label.Text>
+                                </Label>
                             </Grid>
                         </controls:Expander.MainContent>
                     </controls:Expander>
