--- a/WeatherApp/WA-Front/View/CalendarView.xaml
+++ b/WeatherApp/WA-Front/View/CalendarView.xaml
@@ -7,17 +7,13 @@
              x:DataType="viewmodel:CalendarViewModel"
              x:Class="WA_Front.View.CalendarView">
     <ContentView.Resources>
-        <Style TargetType="Label">
-            <Setter Property="BackgroundColor" Value="#8F89CF"/>
-            <Setter Property="TextColor" Value="White"/>
-        </Style>
         <Style TargetType="Border">
             <Setter Property="VisualStateManager.VisualStateGroups">
                 <VisualStateGroupList>
                     <VisualStateGroup Name="CheckedStates">
                         <VisualState Name="Checked">
                             <VisualState.Setters>
-                                <Setter Property="Stroke" Value="{x:StaticResource Primary}"/>
+                                <Setter Property="Stroke" Value="{x:StaticResource Accent}"/>
                                 <Setter Property="StrokeThickness" Value="5"/>
                             </VisualState.Setters>
                         </VisualState>
@@ -47,9 +43,6 @@
                                 <ControlTemplate>
                                     <Border WidthRequest="150"
                                             HeightRequest="150">
-                                        <Border.StrokeShape>
-                                            <RoundRectangle CornerRadius="5"/>
-                                        </Border.StrokeShape>
                                         <Grid RowDefinitions="*,*"
                                               ColumnDefinitions="*,*"
                                               BindingContext="{TemplateBinding BindingContext}">
@@ -59,13 +52,15 @@
                                             </Grid.GestureRecognizers>
                                             <Image Grid.Row="0"
                                                    Grid.Column="0"
+                                                   BackgroundColor="{StaticResource Accent}"
                                                    Source="{Binding Data.WeatherImage, StringFormat='p50.png'}"/>
                                             <Label Grid.Row="0"
                                                    Grid.Column="1"
+                                                   Style="{StaticResource AccentLabel}"
                                                    Text="{Binding Data.Time, StringFormat='{0:dd/MM/yyyy}'}"/>
                                             <Label Grid.Row="1"
                                                    Grid.Column="0"
-                                                   BackgroundColor="#312D59">
+                                                   Style="{StaticResource PrimaryLabel}">
                                                 <Label.Text>
                                                     <MultiBinding StringFormat="Min: {0}{1}">
                                                         <Binding Path="Data.Temperature2MMin"/>
@@ -75,7 +70,7 @@
                                             </Label>
                                             <Label Grid.Row="1"
                                                    Grid.Column="1"
-                                                   BackgroundColor="#312D59">
+                                                   Style="{StaticResource PrimaryLabel}">
                                                 <Label.Text>
                                                     <MultiBinding StringFormat="Max: {0}{1}">
                                                         <Binding Path="Data.Temperature2MMax"/>
@@ -93,51 +88,58 @@
             </controls:HorizontalFlexLayout>
         </controls:Expander.HeaderContent>
         <controls:Expander.MainContent>
-            <Grid RowDefinitions="Auto,Auto,Auto,Auto,Auto,Auto,Auto,Auto,Auto,Auto,Auto,*"
+            <Grid RowDefinitions="Auto,Auto,Auto,Auto,Auto,Auto,Auto,Auto,Auto,*"
                   BackgroundColor="{x:StaticResource Primary}"
                   Padding="5"
                   RowSpacing="5"
                   x:DataType="apimodel:DailyModel"
                   x:Name="Content">
-                <Grid.Resources>
-                    <Style TargetType="Label">
-                        <Setter Property="TextColor" Value="White"/>
-                        <Setter Property="BackgroundColor" Value="#312D59"/>
-                    </Style>
-                </Grid.Resources>
-                <Image Grid.Row="0"
+                <Grid Grid.Row="0"
+                      ColumnDefinitions="*,*">
+                    <Image Grid.Column="0"
                        Source="{Binding Data.WeatherImage, StringFormat='p50.png'}"/>
-                <Label Grid.Row="1">
-                    <Label.Text>
-                        <MultiBinding StringFormat="Min: {0}{1}">
-                            <Binding Path="Data.Temperature2MMin"/>
-                            <Binding Path="Units.Temperature2MMin"/>
-                        </MultiBinding>
-                    </Label.Text>
-                </Label>
-                <Label Grid.Row="2">
-                    <Label.Text>
-                        <MultiBinding StringFormat="Max: {0}{1}">
-                            <Binding Path="Data.Temperature2MMax"/>
-                            <Binding Path="Units.Temperature2MMax"/>
-                        </MultiBinding>
-                    </Label.Text>
-                </Label>
-                <Label Grid.Row="3">
+                    <Grid Grid.Column="1"
+                          RowDefinitions="*,*">
+                        <Label Grid.Row="0"
+                               Style="{StaticResource PrimaryLabel}"
+                               FontSize="18">
+                            <Label.Text>
+                                <MultiBinding StringFormat="Max: {0}{1}">
+                                    <Binding Path="Data.Temperature2MMax"/>
+                                    <Binding Path="Units.Temperature2MMax"/>
+                                </MultiBinding>
+                            </Label.Text>
+                        </Label>
+                        <Label Grid.Row="1"
+                               Style="{StaticResource PrimaryLabel}"
+                               FontSize="18">
+                            <Label.Text>
+                                <MultiBinding StringFormat="Min: {0}{1}">
+                                    <Binding Path="Data.Temperature2MMin"/>
+                                    <Binding Path="Units.Temperature2MMin"/>
+                                </MultiBinding>
+                            </Label.Text>
+                        </Label>
+                    </Grid>
+                </Grid>
+                <Label Grid.Row="1"
+                       Style="{StaticResource AccentLabel}">
                     <Label.Text>
                         <MultiBinding StringFormat="Sunrise: {0}">
                             <Binding Path="Data.Sunrise"/>
                         </MultiBinding>
                     </Label.Text>
                 </Label>
-                <Label Grid.Row="4">
+                <Label Grid.Row="2"
+                       Style="{StaticResource AccentLabel}">
                     <Label.Text>
                         <MultiBinding StringFormat="Sunset: {0}">
                             <Binding Path="Data.Sunset"/>
                         </MultiBinding>
                     </Label.Text>
                 </Label>
-                <Label Grid.Row="5">
+                <Label Grid.Row="3"
+                       Style="{StaticResource AccentLabel}">
                     <Label.Text>
                         <MultiBinding StringFormat="PrecipitationSum: {0}{1}">
                             <Binding Path="Data.PrecipitationSum"/>
@@ -145,7 +147,8 @@
                         </MultiBinding>
                     </Label.Text>
                 </Label>
-                <Label Grid.Row="6">
+                <Label Grid.Row="4"
+                       Style="{StaticResource AccentLabel}">
                     <Label.Text>
                         <MultiBinding StringFormat="PrecipitationHours: {0}{1}">
                             <Binding Path="Data.PrecipitationHours"/>
@@ -153,7 +156,8 @@
                         </MultiBinding>
                     </Label.Text>
                 </Label>
-                <Label Grid.Row="7">
+                <Label Grid.Row="5"
+                       Style="{StaticResource AccentLabel}">
                     <Label.Text>
                         <MultiBinding StringFormat="Windspeed10MMax: {0}{1}">
                             <Binding Path="Data.Windspeed10MMax"/>
@@ -161,7 +165,8 @@
                         </MultiBinding>
                     </Label.Text>
                 </Label>
-                <Label Grid.Row="8">
+                <Label Grid.Row="6"
+                       Style="{StaticResource AccentLabel}">
                     <Label.Text>
                         <MultiBinding StringFormat="Windgusts10MMax: {0}{1}">
                             <Binding Path="Data.Windgusts10MMax"/>
@@ -169,7 +174,8 @@
                         </MultiBinding>
                     </Label.Text>
                 </Label>
-                <Label Grid.Row="9">
+                <Label Grid.Row="7"
+                       Style="{StaticResource AccentLabel}">
                     <Label.Text>
                         <MultiBinding StringFormat="Winddirection10MDominant: {0}{1}">
                             <Binding Path="Data.Winddirection10MDominant"/>
@@ -177,7 +183,8 @@
                         </MultiBinding>
                     </Label.Text>
                 </Label>
-                <Label Grid.Row="10">
+                <Label Grid.Row="8"
+                       Style="{StaticResource AccentLabel}">
                     <Label.Text>
                         <MultiBinding StringFormat="ShortwaveRadiationSum: {0}{1}">
                             <Binding Path="Data.ShortwaveRadiationSum"/>
